# configs

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  LICENSE  README.md  TODO.md  gitsubmodules.gitsubmodules  init.sh  install-list.txt  install-script.sh  install.conf.yaml  load-shell-modules.sh  path.sh  prompt.zsh  todo.md  zprofile.zsh  zshrc-old.zsh  zshrc.zsh
Windows/: Themes
lifeos-tools/: .env.example  .gitignore  AGENT.md  README.md  google-accounts.example.json  google-calendar-auth.py  google-calendar-render.py  google-credentials.example.json  google-oauth.py  lifeos  lifeos.sh  pyproject.toml
lifeos-tools/lib/: common.sh  google-calendar-write.py  google-gmail-render.py  google-people.py  google-sheets-render.py  google.sh  m365-auth.py  m365-graph.ps1  m365-render.py  m365-write.py  m365.sh  open-austin-org.sh  resume.sh  trello.sh
lifeos-tools/lib/resume-theme/: SOURCE.md
lifeos-tools/secrets/: .env.example  google-accounts.example.json  google-token.example.json  m365-accounts.example.json  people-aliases.example.json
lifeos-tools/skills/lifeos-calendar/: SKILL.md
lifeos-tools/skills/lifeos-cli/: SKILL.md
lifeos-tools/skills/lifeos-drive/: SKILL.md
lifeos-tools/skills/lifeos-gmail/: SKILL.md
lifeos-tools/skills/lifeos-m365/: SKILL.md
lifeos-tools/skills/lifeos-open-austin/: SKILL.md
lifeos-tools/skills/lifeos-resume/: SKILL.md
lifeos-tools/skills/lifeos-trello/: SKILL.md
lifeos-tools/tests/: test-calendar-find.sh  test-calendar-render.sh  test-google-renderers.sh  test-m365-renderers.sh  test-m365-shell.sh  test-m365-write.sh
(+1187 files in other folders)
