[project]
name = "lifeos-tools"
version = "0.1.0"
description = "LifeOS helper CLI: pulls source data into the private vault and supports bounded, explicit writes."
requires-python = ">=3.11"
# Microsoft delegated authentication uses Microsoft's supported MSAL library. The remaining helpers stay small command-line programs rather than a distributable Python package.
# Add one with:  uv add <package>   (updates this file + uv.lock; then `uv sync`)
dependencies = [
    "msal>=1.37.0",
]

[tool.uv]
# This is an application, not a distributable package — don't try to build/install it.
package = false
